# MyFirstTodo

./: .gitignore  README.md  db_test.ipynb  pyproject.toml  todo.db
app/: main.py
app/database/: database.py
app/router/: db_test.ipynb  task.py  test.ipynb
app/schemas/: schemas.py
front/: TodoApiCall.js  index.html  todo.html
