[tool.poetry]
name = "firsttodoapp"
version = "0.1.0"
description = ""
authors = ["Go-Tsuruoka <go.tsuru.714@akane.waseda.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
fastapi = "^0.103.2"
sqlalchemy = "^2.0.21"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
